--- a/src/components/styles/Meme.css
+++ b/src/components/styles/Meme.css
@@ -1,4 +1,4 @@
-form {
+.form {
   margin-top: 2.5rem;
   display: flex;
   flex-direction: column;
@@ -6,6 +6,7 @@ form {
 }
 
 input {
+  text-align: center;
   width: 220px;
   height: 30px;
   margin: 20px;
