--- a/src/components/styles/Meme.css
+++ b/src/components/styles/Meme.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .form {
   margin-top: 2.5rem;
   display: flex;
@@ -26,8 +30,35 @@ button {
     rgba(103, 34, 128, 1) 0%,
     rgba(166, 38, 211, 1) 100%
   );
+  margin-bottom: 2rem;
 }
-img {
-  width: 500px;
-  height: 500px;
+.memeImg {
+  max-width: 100%;
+}
+.meme {
+  position: relative;
+}
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000,
+    0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000, 2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
